fix(gallery): hide overflow if gallery is open

--- a/src/components/base.scss
+++ b/src/components/base.scss
@@ -60,6 +60,10 @@ body {
       justify-content: space-between;
     }
   }
+
+  &.dialog-open {
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 768px) {
